Fix filter icon not appearing on IE8

--- a/web/static/css/style.scss
+++ b/web/static/css/style.scss
@@ -730,6 +730,7 @@ footer {
 		margin-right: -28px;
 		font-size: 18px;
 		vertical-align: middle;
+		position: relative;
 	}
 
 	#overview-search-noresult {
